function(add_kc_test name)
  set(source_name "kc${name}test")

  add_executable(${source_name} ${source_name} testutil.cc ${ARGV1})
  target_link_libraries(${source_name} kyotocabinet)
  add_test(NAME ${source_name} COMMAND ${source_name} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
  set(check_task "check-${name}")

  add_custom_target(${check_task} COMMAND ${CMAKE_CTEST_COMMAND} -R ${source_name})
  add_dependencies(${check_task} ${source_name})
  add_dependencies(check ${check_task})
endfunction()
 
add_kc_test(util ../src/kcutilmgr_impl.cc)
add_kc_test(proto)
add_kc_test(stash)
add_kc_test(cache)
add_kc_test(grass)
add_kc_test(hash ../src/kchashmgr_impl.cc)
add_kc_test(tree ../src/kctreemgr_impl.cc)
add_kc_test(dir)
add_kc_test(forest)
add_kc_test(poly)
add_kc_test(langc)
